--- a/Framework/DeepNestLib/packages.config
+++ b/Framework/DeepNestLib/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IxMilia.Dxf" version="0.7.5" targetFramework="net45" />
+  <package id="IxMilia.Dxf" version="0.8.4" targetFramework="net481" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net481" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
+  <package id="System.Text.Encoding.CodePages" version="8.0.0" targetFramework="net481" />
 </packages>
